[package]
name = "Chorus"
version = "0.0.1"
edition = "2024"
license = "GPL-3"
authors = ["OmniacDev"]


[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde-java-properties = "0.2.0"
toml = "0.8"
log = "0.4"
fern = "0.7"
fern_colored = { version = "0.6", features = ["colored"] }
chrono = "0.4"
once_cell = "1.21.3"
linked-hash-map = "0.5.6"

bedrockrs = { git = "https://github.com/bedrock-crustaceans/bedrockrs", branch = "main", features = ["full"] }
nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }
